# wallwander-django

./: Dockerfile  Pipfile  README.MD  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  urls.py
api/migrations/: 0001_initial.py  0002_auto_20191016_1558.py
api/models/: Image.py  User.py  __init__.py
api/tests/: User.py
config/: settings.py  urls.py
server/: main.py
