[tool.poetry]
name = "wallwander-django"
version = "0.1.0"
description = ""
authors = ["Matthew Yates <Mat.C.Yates@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
